deploy: abf3b5a848dcd0c8778c3cef9a2123a09a3a795f

--- a/sample/index.html
+++ b/sample/index.html
@@ -1,6 +1,6 @@
 [
     {
-        "name": "東京",
+        "name": "東京駅",
         "lat": 35.681382,
         "lng": 139.766084,
         "rating": 10,
